--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -414,7 +414,12 @@ body, div, h1, h2, h3, h4, p, input {
   top: 50%;
   // transform: translateY(-);
 
-	// @include elg(top, 12%);
+  // @include elg(top, 12%);
+  
+  @media screen and (min-width: 1442px) and (max-width: 1536px) and (min-height: 700px) and (max-height: 760px){
+    top: 43%;
+    right: 5%;
+  }
 	
 	@include elg-block{
 		width: 44px;
@@ -641,7 +646,11 @@ body, div, h1, h2, h3, h4, p, input {
 
 	@media screen and (max-width: 1366px) and (max-height: 768px){
 		font-size: 30px;
-	}
+  }
+  
+  @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+    font-size: 26px;
+  }
 
 	@media screen and (max-width: 1280px) and (max-height: 720px) {
 		font-size: 26px;
@@ -800,7 +809,11 @@ body, div, h1, h2, h3, h4, p, input {
   position: relative;
   width: 1344px;
   // max-height: 1344px;
-	padding: 110px 60px;
+  padding: 110px 60px;
+  
+  @media screen and (min-width: 1442px) and (max-width: 1536px) and (min-height: 700px) and (max-height: 760px){
+    padding: 60px 30px;
+  }
 	
 	@media screen and (min-width: 2560px){
 		width: 70vw;
@@ -1798,7 +1811,11 @@ body, div, h1, h2, h3, h4, p, input {
 		font-size: 24px;
 		line-height: 1.3;
 		color: black;
-		margin: 15px 0;
+    margin: 15px 0;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      font-size: 14px;
+    }
 
 		@media screen and (min-width: 2560px){
 			font-size: 32px;
@@ -1905,7 +1922,15 @@ body, div, h1, h2, h3, h4, p, input {
 	}
 
 	&__logo{
-		width: 300px;
+    width: 300px;
+
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+			width: 100px;
+		}
+    
+    @media screen and (min-width: 1442px) and (max-width: 1536px) and (min-height: 700px) and (max-height: 760px){
+			width: 150px;
+		}
 
 		@media screen and (max-width: 1280px) and (max-height: 720px) {
 			width: 150px;
@@ -1921,7 +1946,11 @@ body, div, h1, h2, h3, h4, p, input {
 	&__about{
 		font-family: Rubik-Regular, sans-serif;	
 
-		margin-top: 20px;
+    margin-top: 20px;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      font-size: 16px;
+		}
 
 		@include elg(margin-top, 10px);
 		@include sm(margin-top, 2vw);
@@ -1936,7 +1965,12 @@ body, div, h1, h2, h3, h4, p, input {
 		font-family: Rubik-Bold, sans-serif;
 		color: black;
 
-		margin-top: 60px;
+    margin-top: 60px;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      margin-top: 30px;
+      font-size: 20px;
+		}
 
 		@include elg(margin-top, 40px);
 		@include sm(margin-top, 8vw);
@@ -1950,7 +1984,12 @@ body, div, h1, h2, h3, h4, p, input {
 	&__subtitle{
 		font-family: Rubik-Regular, sans-serif;
 
-		margin-top: 20px;
+    margin-top: 20px;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      margin-top: 15px;
+      font-size: 16px;
+		}
 
 		@include elg(margin-top, 10px);
 		@include sm(margin-top, 2vw);
@@ -2049,7 +2088,11 @@ body, div, h1, h2, h3, h4, p, input {
 		// border: 1px solid white;
 		position: relative;
 		line-height: 1;
-		width: 255px;
+    width: 255px;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      width: 150px;
+		}
 
 		@include elg(width, 210px);
 		@include lg(width, 160px);
@@ -2065,14 +2108,23 @@ body, div, h1, h2, h3, h4, p, input {
 			width: 150%;
 			top: 50%;
 			left: 50%;
-			transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      
+      @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+        width: 145%;
+        left: 45%;
+      }
 		}
 	}
 
 	&__colTitle{
 		font-family: Rubik-Bold, sans-serif;
 		font-size: 140px;
-		text-transform: uppercase;
+    text-transform: uppercase;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      font-size: 70px;
+		}
 
 		@include elg(font-size, 110px);
 		@include lg(font-size, 80px);
@@ -2097,7 +2149,11 @@ body, div, h1, h2, h3, h4, p, input {
 		font-family: Rubik-Bold, sans-serif;
 		font-size: 35px;
 		text-transform: uppercase;
-		color: white;
+    color: white;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      font-size: 20px;
+		}
 
 		@include elg(font-size, 27px);
 		@include lg(font-size, 20px);
@@ -2111,7 +2167,11 @@ body, div, h1, h2, h3, h4, p, input {
 		font-size: 30px;
 		color: white;
 
-		margin-top: 5px;
+    margin-top: 5px;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      font-size: 20px;
+		}
 
 		@include elg(font-size, 24px);
 		@include lg(font-size, 22px);
@@ -2177,7 +2237,11 @@ body, div, h1, h2, h3, h4, p, input {
 
 	&__mainLine{
 		font-family: Rubik-Bold, sans-serif;
-		font-size: 55px;
+    font-size: 55px;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      font-size: 26px;
+		}
 
 		@include elg(font-size, 35px);
 		@include md(font-size, 3vw);
@@ -2186,7 +2250,11 @@ body, div, h1, h2, h3, h4, p, input {
 
 		& > span{
 			font-size: 70px;
-			color: red;
+      color: red;
+      
+      @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+        font-size: 26px;
+      }
 
 			@include elg(font-size, 55px);
 			@include md(font-size, 4vw);
@@ -2411,7 +2479,11 @@ body, div, h1, h2, h3, h4, p, input {
 		& > h3{
 			font-family: Rubik-Bold, sans-serif;
 			font-size: 20px;
-			color: black;
+      color: black;
+      
+      @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+        font-size: 12px;
+      }
 
 			@media screen and (min-width: 2560px){
 				font-size: 30px;
@@ -2449,7 +2521,11 @@ body, div, h1, h2, h3, h4, p, input {
 		& > p{
 			font-family: Rubik-Regular, sans-serif;
 			font-size: 18px;
-			color: black;
+      color: black;
+      
+      @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+        font-size: 12px;
+      }
 
 			@media screen and (min-width: 2560px){
 				font-size: 30px;
@@ -2497,7 +2573,11 @@ body, div, h1, h2, h3, h4, p, input {
 		// border: 1px solid blue;
 		position: relative;
 		text-align: center;
-		width: 50%;
+    width: 50%;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      height: 300px;
+    }
 
 		@media screen and (min-width: 2560px){
 			width: 40%;
@@ -2679,7 +2759,11 @@ body, div, h1, h2, h3, h4, p, input {
 			font-family: Rubik-Bold, sans-serif;
 			font-size: 30px;
 			line-height: 1.3;
-			color: red;
+      color: red;
+      
+      @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+        font-size: 14px;
+      }
 			
 			@media screen and (min-width: 2560px){
 				font-size: 45px;
@@ -2714,7 +2798,11 @@ body, div, h1, h2, h3, h4, p, input {
 			font-family: Rubik-Regular, sans-serif;
 			font-size: 18px;
 			line-height: 1.3;
-			color: black;
+      color: black;
+      
+      @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+        font-size: 14px;
+      }
 
 			@media screen and (min-width: 2560px){
 				font-size: 40px;
@@ -2893,7 +2981,11 @@ body, div, h1, h2, h3, h4, p, input {
 
 		& > h3{
 			font-family: Rubik-Bold, sans-serif;
-			font-size: 26px;
+      font-size: 26px;
+      
+      @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+        font-size: 14px;
+      }
 
 			@include elg(font-size, 24px);			
 			@include lg(font-size, 22px);
@@ -2905,7 +2997,11 @@ body, div, h1, h2, h3, h4, p, input {
 
 		& > p{
 			font-family: Rubik-Regular, sans-serif;
-			font-size: 18px;
+      font-size: 18px;
+      
+      @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+        font-size: 14px;
+      }
 
 			@include elg(font-size, 16px);
 			@include md(font-size, 1.7vw);
@@ -2961,7 +3057,11 @@ body, div, h1, h2, h3, h4, p, input {
 			font-family: Rubik-Bold, sans-serif;
 			font-size: 80px;
 			text-transform: uppercase;
-			color: red;
+      color: red;
+      
+      @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+        font-size: 50px;
+      }
 
 			@include elg(font-size, 70px);
 			@include lg(font-size, 60px);
@@ -2975,7 +3075,11 @@ body, div, h1, h2, h3, h4, p, input {
 			font-size: 22px;
 			color: white;
 
-			margin-top: 20px;
+      margin-top: 20px;
+      
+      @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+        font-size: 16px;
+      }
 
 			@include lg(font-size, 20px);
 			@include md(font-size, 1.8vw);
@@ -2989,7 +3093,11 @@ body, div, h1, h2, h3, h4, p, input {
 
 	&__right{
 		// border: 1px solid blue;
-		width: 610px;
+    width: 610px;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      width: 300px;
+    }
 
 		@include elg(width, 470px);
 		@include lg(width, 400px);
@@ -3028,7 +3136,11 @@ body, div, h1, h2, h3, h4, p, input {
 		font-size: 26px;
 		color: black;
 
-		width: 550px;
+    width: 550px;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      font-size: 14px;
+    }
 
 		@media screen and (min-width: 2560px){
 			font-size: 35px;
@@ -3069,7 +3181,11 @@ body, div, h1, h2, h3, h4, p, input {
 		width: 670px;
 		margin-right: -50px;
 		margin-bottom: 40px;
-		align-self: flex-end;
+    align-self: flex-end;
+    
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      width: 55%;
+    }
 
 		@media screen and (min-width: 2560px){
 			width: 60%;
@@ -3127,10 +3243,15 @@ body, div, h1, h2, h3, h4, p, input {
 		margin-top: 30px;
 
 		&_desk{
-			@include sm(display, none);
+      @include sm(display, none);
+      text-align: center;
 
 			& > picture{
 				& > img{
+
+          @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+            width: 80%;
+          }
 
 					@media screen and (max-width: 1600px) and (max-height: 900px) {
 						height: 65vh;
@@ -3759,7 +3880,15 @@ body, div, h1, h2, h3, h4, p, input {
 		justify-content: flex-start;
 		align-items: flex-start;
 
-		// z-index: 10;
+    // z-index: 10;
+
+    @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+      top: 0;
+    }
+    
+    @media screen and (min-width: 1442px) and (max-width: 1536px) and (min-height: 700px) and (max-height: 760px){
+			top: 6%;
+		}
 
 		@media screen and (max-width: 1280px) and (max-height: 720px) {
 			top: 0;
