--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -415,7 +415,8 @@ body, div, h1, h2, h3, h4, p, input {
   // transform: translateY(-);
 
   // @include elg(top, 12%);
-  
+
+  //1920x1080 125%
   @media screen and (min-width: 1442px) and (max-width: 1536px) and (min-height: 700px) and (max-height: 760px){
     top: 43%;
     right: 5%;
@@ -648,6 +649,7 @@ body, div, h1, h2, h3, h4, p, input {
 		font-size: 30px;
   }
   
+  //1336x768 125%
   @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
     font-size: 26px;
   }
@@ -810,7 +812,7 @@ body, div, h1, h2, h3, h4, p, input {
   width: 1344px;
   // max-height: 1344px;
   padding: 110px 60px;
-  
+  //1920x1080 125%
   @media screen and (min-width: 1442px) and (max-width: 1536px) and (min-height: 700px) and (max-height: 760px){
     padding: 60px 30px;
   }
@@ -1813,6 +1815,7 @@ body, div, h1, h2, h3, h4, p, input {
 		color: black;
     margin: 15px 0;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       font-size: 14px;
     }
@@ -1924,10 +1927,12 @@ body, div, h1, h2, h3, h4, p, input {
 	&__logo{
     width: 300px;
 
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
 			width: 100px;
-		}
+    }
     
+    //1920x1080 125%
     @media screen and (min-width: 1442px) and (max-width: 1536px) and (min-height: 700px) and (max-height: 760px){
 			width: 150px;
 		}
@@ -1948,6 +1953,7 @@ body, div, h1, h2, h3, h4, p, input {
 
     margin-top: 20px;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       font-size: 16px;
 		}
@@ -1967,6 +1973,7 @@ body, div, h1, h2, h3, h4, p, input {
 
     margin-top: 60px;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       margin-top: 30px;
       font-size: 20px;
@@ -1986,6 +1993,7 @@ body, div, h1, h2, h3, h4, p, input {
 
     margin-top: 20px;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       margin-top: 15px;
       font-size: 16px;
@@ -2001,11 +2009,21 @@ body, div, h1, h2, h3, h4, p, input {
 	background-image: url(../images/my/aboutAgency/large/bg.png);
 	background-position: center;
 	background-size: contain;
-	background-repeat: no-repeat;
+  background-repeat: no-repeat;
 
+  @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
+    // width: 80%;
+  }
+
+  //1368x768 125%
 	@media screen and (max-width: 1280px) and (max-height: 720px) {
-		background-size: 90%;
-	}
+    background-size: 80%;
+  }
+
+  //1920x1080 125%
+  @media screen and (min-width: 1442px) and (max-width: 1536px) and (min-height: 700px) and (max-height: 760px){
+    background-size: 95%;
+  }
 
 	@media (max-width: 1920px){
 		background-image: url(../images/my/aboutAgency/fullhd/bg.png);
@@ -2090,6 +2108,7 @@ body, div, h1, h2, h3, h4, p, input {
 		line-height: 1;
     width: 255px;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       width: 150px;
 		}
@@ -2110,6 +2129,7 @@ body, div, h1, h2, h3, h4, p, input {
 			left: 50%;
       transform: translate(-50%, -50%);
       
+      //1336x768 125%
       @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
         width: 145%;
         left: 45%;
@@ -2122,6 +2142,7 @@ body, div, h1, h2, h3, h4, p, input {
 		font-size: 140px;
     text-transform: uppercase;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       font-size: 70px;
 		}
@@ -2151,6 +2172,7 @@ body, div, h1, h2, h3, h4, p, input {
 		text-transform: uppercase;
     color: white;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       font-size: 20px;
 		}
@@ -2169,6 +2191,7 @@ body, div, h1, h2, h3, h4, p, input {
 
     margin-top: 5px;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       font-size: 20px;
 		}
@@ -2239,6 +2262,7 @@ body, div, h1, h2, h3, h4, p, input {
 		font-family: Rubik-Bold, sans-serif;
     font-size: 55px;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       font-size: 26px;
 		}
@@ -2252,6 +2276,7 @@ body, div, h1, h2, h3, h4, p, input {
 			font-size: 70px;
       color: red;
       
+      //1336x768 125%
       @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
         font-size: 26px;
       }
@@ -2481,6 +2506,7 @@ body, div, h1, h2, h3, h4, p, input {
 			font-size: 20px;
       color: black;
       
+      //1336x768 125%
       @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
         font-size: 12px;
       }
@@ -2523,6 +2549,7 @@ body, div, h1, h2, h3, h4, p, input {
 			font-size: 18px;
       color: black;
       
+      //1336x768 125%
       @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
         font-size: 12px;
       }
@@ -2575,6 +2602,7 @@ body, div, h1, h2, h3, h4, p, input {
 		text-align: center;
     width: 50%;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       height: 300px;
     }
@@ -2761,6 +2789,7 @@ body, div, h1, h2, h3, h4, p, input {
 			line-height: 1.3;
       color: red;
       
+      //1336x768 125%
       @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
         font-size: 14px;
       }
@@ -2800,6 +2829,7 @@ body, div, h1, h2, h3, h4, p, input {
 			line-height: 1.3;
       color: black;
       
+      //1336x768 125%
       @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
         font-size: 14px;
       }
@@ -2983,6 +3013,7 @@ body, div, h1, h2, h3, h4, p, input {
 			font-family: Rubik-Bold, sans-serif;
       font-size: 26px;
       
+      //1336x768 125%
       @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
         font-size: 14px;
       }
@@ -2999,6 +3030,7 @@ body, div, h1, h2, h3, h4, p, input {
 			font-family: Rubik-Regular, sans-serif;
       font-size: 18px;
       
+      //1336x768 125%
       @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
         font-size: 14px;
       }
@@ -3059,6 +3091,7 @@ body, div, h1, h2, h3, h4, p, input {
 			text-transform: uppercase;
       color: red;
       
+      //1336x768 125%
       @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
         font-size: 50px;
       }
@@ -3077,6 +3110,7 @@ body, div, h1, h2, h3, h4, p, input {
 
       margin-top: 20px;
       
+      //1336x768 125%
       @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
         font-size: 16px;
       }
@@ -3095,6 +3129,7 @@ body, div, h1, h2, h3, h4, p, input {
 		// border: 1px solid blue;
     width: 610px;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       width: 300px;
     }
@@ -3138,6 +3173,7 @@ body, div, h1, h2, h3, h4, p, input {
 
     width: 550px;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       font-size: 14px;
     }
@@ -3183,6 +3219,7 @@ body, div, h1, h2, h3, h4, p, input {
 		margin-bottom: 40px;
     align-self: flex-end;
     
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       width: 55%;
     }
@@ -3249,6 +3286,7 @@ body, div, h1, h2, h3, h4, p, input {
 			& > picture{
 				& > img{
 
+          //1336x768 125%
           @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
             width: 80%;
           }
@@ -3882,10 +3920,12 @@ body, div, h1, h2, h3, h4, p, input {
 
     // z-index: 10;
 
+    //1336x768 125%
     @media screen and (min-width: 1051px) and (max-width: 1094px) and (min-height: 470px) and (max-height: 510px){
       top: 0;
     }
     
+    //1920x1080 125%
     @media screen and (min-width: 1442px) and (max-width: 1536px) and (min-height: 700px) and (max-height: 760px){
 			top: 6%;
 		}
